--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ p {
     font-size: 2.4rem;
     font-family: var(--font-dancing-script);
     font-weight: normal;
-    background-color: var(--white-color);
+    background-color: #E4EDF1;;
     box-shadow: 0 .2rem .4rem rgba(0,0,0,0.1);
     animation-name: toFadeIn;
     animation-duration: 2s;
